--- a/inex.html
+++ b/inex.html
@@ -1,1 +1,34 @@
-1111
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Embedded Spline Model for Android</title>
+    <style>
+        body, html {
+            margin: 0;
+            padding: 0;
+            width: 100%;
+            height: 100%;
+            overflow: hidden;
+            background-color: black; /* Black Background */
+        }
+        iframe {
+            display: block;
+            width: 100%;
+            height: 100vh; /* Full viewport height */
+            border: none;
+        }
+    </style>
+</head>
+<body>
+
+    <!-- Embedded Spline Model for Android -->
+    <iframe src="https://build.spline.design/g9GakAcjMMpCYLie5p3b/scene.splinecontent" 
+            frameborder="0" 
+            width="100%" 
+            height="100%">
+    </iframe>
+
+</body>
+</html>
