--- a/inex.html
+++ b/inex.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Embedded Spline Model for Android</title>
+    <title>Android Spline Embed</title>
     <style>
         body, html {
             margin: 0;
@@ -16,7 +16,7 @@
         iframe {
             display: block;
             width: 100%;
-            height: 100vh; /* Full viewport height */
+            height: 100vh;
             border: none;
         }
     </style>
@@ -24,11 +24,24 @@
 <body>
 
     <!-- Embedded Spline Model for Android -->
-    <iframe src="https://build.spline.design/g9GakAcjMMpCYLie5p3b/scene.splinecontent" 
-            frameborder="0" 
-            width="100%" 
-            height="100%">
-    </iframe>
+    <iframe id="splineEmbed" src="" frameborder="0" width="100%" height="100%"></iframe>
+
+    <script>
+        // Function to detect if the device is Android
+        function isAndroid() {
+            const userAgent = navigator.userAgent.toLowerCase();
+            return /android/i.test(userAgent); // Detects Android devices
+        }
+
+        // Check if the user is on an Android device
+        if (isAndroid()) {
+            // If the user is on an Android phone, embed the specific Spline model
+            document.getElementById('splineEmbed').src = "https://build.spline.design/g9GakAcjMMpCYLie5p3b/scene.splinecontent";
+        } else {
+            // Optionally, you can add a message or embed another content for non-Android devices
+            document.body.innerHTML = "<h1>Sorry, this content is available only for Android devices.</h1>";
+        }
+    </script>
 
 </body>
-</html> 
+</html>
