--- a/inex.html
+++ b/inex.html
@@ -24,7 +24,7 @@
 <body>
 
     <!-- Embedded Spline Model -->
-    <iframe id="splineEmbed" src="https://my.spline.design/robotfollowcursorforlandingpage-a9670497cf273c4e2de2a6f1382f078f/" frameborder="0" width="100%" height="100%"></iframe>
+    <iframe src="https://my.spline.design/robotfollowcursorforlandingpage-a9670497cf273c4e2de2a6f1382f078f/" frameborder="0" width="100%" height="100%"></iframe>
 
     <script>
         // Function to detect if the device is Android
